fixed the hero a lil not responsive yet will work on it

--- a/style.css
+++ b/style.css
@@ -53,13 +53,12 @@
     background: #eee;
 		text-align: center;
 		padding: 0 2em;
-    position: sticky;
     background-image: url(imgs/herofr.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center; /* Centers the image within the container */
-    width: 100%; /* Makes sure the div takes the full width */
-    height: 100vh; /* Sets the height to 100% of the viewport height */
+    background-position: center; 
+    width: 100%; 
+    height: 100vh; 
 
     
     h1 {
@@ -77,20 +76,20 @@
 .et-hero-tabs-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around; /* Align tabs evenly */
-  position: fixed; /* Makes the navbar fixed at the bottom or top */
-  bottom: 0; /* Sticks it to the bottom */
-  width: 100%; /* Makes it take up the full width of the viewport */
-  height: 70px; /* Set the height of the navbar */
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* Adds shadow for a 3D effect */
-  background: #fff; /* White background */
-  z-index: 5000; /* Keep the navbar on top of other content */
+  justify-content: space-around;
+  position: fixed; 
+  bottom: 0; 
+  width: 100%; 
+  height: 70px; 
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
+  background: #fff; 
+  z-index: 5000; /
 }
 
 .et-hero-tabs-container--top {
-  position: fixed; /* Fixes the navbar to the top when the class is applied */
-  top: 0; /* Positions the navbar at the top */
-  bottom: auto; /* Removes the bottom property so it doesn't stick to the bottom anymore */
+  position: fixed; 
+  top: 0; 
+  bottom: auto; /
 }
 
 
@@ -105,7 +104,7 @@
 		font-size: 0.8rem;
 	  &:hover {
 			color:white;
-      background: rgba(102,177,241,0.8);
+      background: tan;
 			transition: all 0.5s ease;
     
 
@@ -137,4 +136,8 @@
 }
 
 .section{
+}
+.Title-info{
+  align-self: start;
+  margin-left: 250px;
 }
